# skim

./: .codespellrc  .dockerignore  .envrc  .envrc.local  .gitignore  .yamllint  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  RATATUI_BREAKING_CHANGES.md  RATATUI_MIGRATION.md  README.md  TUIKIT_TO_RATATUI_MIGRATION_ANALYSIS.md  Vagrantfile  bench.py  bench.sh  build.rs  cliff.toml  codecov.yml  default_18219397805420217480_0_4049675.profraw  dist-workspace.toml  e2e.dockerfile  flake.nix  install  justfile  lcov.info  perf.data  perf_frizbee.data  rust-toolchain.toml  sk.1  sonar-project.properties  test.Dockerfile  test.dockerfile
.cargo/: config.toml
.config/: insta.yaml  nextest.toml  valgrind.supp
.githooks/: pre-commit
.github/: CONTRIBUTING.md  dependabot.yml  pr-title-checker-config.json  pull_request_template.md  release-plz.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/release-please/: config.json  manifest.json
.github/workflows/: apt.yml  ci.yml  fuzz.yml  main.yml  package-build.yml  package.yml  pr.yml  publish-github.yml  publish.yml  release-binaries.yml  release-create.yml  release-please.yml  release-plz.yml  release-pr.yml  release.yml  sonar.yml  test.yml  winget.yml
apt/: InRelease  Packages  Release  Release.gpg  skim-archive-keyring.asc  skim_5.4.0-1_amd64.deb  skim_5.4.0-1_arm64.deb  skim_5.5.0-1_amd64.deb  skim_5.5.0-1_arm64.deb
async-ratatui/: Cargo.toml
async-ratatui/examples/: basic.rs
async-ratatui/src/: lib.rs
benches/: cli.rs  filter.rs  gungraun.rs  matcher_micro.rs  partial.rs  read_and_match.rs
common/: CHANGELOG.md  Cargo.toml
coverage/: index.html
e2e/: CHANGELOG.md  Cargo.toml  base.py  config.py  pyproject.toml  test_actions.py  test_binds.py  test_options.py  test_vanilla.py  tmux.py  utils.py
e2e/src/: lib.rs  test_utils.rs
e2e/tests/: ansi.rs  binds.rs  case.rs  defaults.rs  history.rs  issues.rs  keys.rs  keys_interactive.rs  options.rs  preview.rs  tiebreak.rs  tmux.rs
examples/: ansi.rs  async.rs  base.rs  cmd_collector.rs  custom_action_keybinding.rs  custom_item.rs  custom_keybinding_actions.rs  downcast.rs  fine-grain.rs  fuzzy_matcher_fz.rs  image.rs  multiple_runs.rs  nth.rs  option_builder.rs  preview_callback.rs  receiver_multi.rs  sample.rs  selector.rs  tick.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: ansi_strip.rs  field_extract.rs  fuzzy_match.rs  keymap_parse.rs  query_match.rs
man/man1/: sk-tmux.1  sk.1
plugin/: skim.vim
scripts/: bench-history.py  plot-bench.py
shell/: CHANGELOG.md  completion.bash  completion.fish  completion.nu  completion.zsh  key-bindings.bash  key-bindings.fish  key-bindings.zsh
shell/bash/: sk-completion.bash
shell/elvish/: sk.elv
shell/fig/: sk.ts
shell/fish/: sk.fish
shell/nushell/: sk-completion.nu
shell/powershell/: sk-completion.ps1
shell/zsh/: _zsh
skim/: .gitignore  CHANGELOG.md  Cargo.toml
skim-common/: Cargo.toml
skim-common/src/: spinlock.rs
skim-tuikit/: Cargo.toml  README.md
skim-tuikit/examples/: 256color.rs  256color_on_screen.rs  custom-event.rs  get_keys.rs  stack.rs  true_color.rs
skim-tuikit/src/: attr.rs  input.rs  lib.rs  output.rs  raw.rs  screen.rs  term.rs
skim/examples/: cmd_collector.rs  custom_item.rs  custom_keybinding_actions.rs  default.rs  downcast.rs  nth.rs  preview_callback.rs  receiver_multi.rs  sample.rs  selector.rs  tuikit.rs
skim/src/: ansi.rs  binds.rs  context.rs  event.rs  field.rs  global.rs  header.rs  input.rs  item.rs  lib.rs  matcher.rs  model.rs  options.rs  orderedvec.rs  output.rs  prelude.rs  previewer.rs  query.rs  reader.rs  selection.rs  spinlock.rs  theme.rs  tmux.rs  util.rs
skim/src/engine/: all.rs  andor.rs  exact.rs  factory.rs  fuzzy.rs  regexp.rs
skim/src/fuzzy_matcher/: mod.rs
skim/src/helper/: item.rs  item_reader.rs  selector.rs
skim/src/model/: mod.rs  options.rs  status.rs
skim/src/tui/: app.rs  backend.rs  event.rs  header.rs  input.rs  item_list.rs  mod.rs  options.rs  preview.rs  statusline.rs  tui.rs
skim/src/ui/: coordinator.rs  coordinator_v2.rs  demo.rs  events.rs  input_translator.rs  layout.rs  legacy_bridge.rs  mod.rs  state.rs  terminal_wrapper.rs  theme.rs  theme_demo.rs  tuikit_compat.rs
skim/src/ui/components/: header.rs  mod.rs  previewer.rs  query.rs  selection.rs  status.rs
skim/tests/: ansi.rs  binds.rs  case.rs  defaults.rs  highlighting.rs  history.rs  issues.rs  keys.rs  keys_interactive.rs  options.rs  preview.rs  tiebreak.rs  tmux.rs  tmux_controller.rs
skim/tests/common/: mod.rs
src/: ansi.rs  binds.rs  binds_tests.rs  completions.rs  context.rs  event.rs  field.rs  field_tests.rs  global.rs  header.rs  input.rs  item.rs  item_tests.rs  lib.rs  lib_tests.rs  manpage.rs  matcher.rs  model.rs  options.rs  options_tests.rs  orderedvec.rs  output.rs  prelude.rs  previewer.rs  query.rs  reader.rs  selection.rs  shell.rs  shell_tests.rs  skim.rs  skim_item.rs  skim_tests.rs  spinlock.rs  theme.rs  theme_tests.rs  thread_pool.rs  thread_pool_tests.rs  tmux.rs  util.rs  util_tests.rs
src/engine/: all.rs  andor.rs  andor_tests.rs  exact.rs  exact_tests.rs  factory.rs  fuzzy.rs  mod.rs  normalized.rs  regexp.rs  split.rs  util.rs
src/fuzzy_matcher/: fzy.rs  (+8 more)
test/: mock.sh  run.sh  test_skim.py
tests/: ansi.rs  binds.rs  case.rs  cli.rs  defaults.rs  e2e_filter.rs  execute.rs  highlighting.rs  history.rs  interactive.rs  issues.rs  keys.rs  keys_interactive.rs  layout.rs  listen.rs  matcher.rs  mouse.rs  multiline.rs  normalize.rs  options.rs  popup.rs  preview.rs  split_match.rs  tiebreak.rs  tmux.rs  unix.rs
tuikit/: CHANGELOG.md  Cargo.toml
tuikit/examples/: 256color_on_screen.rs  alt.rs  hello-world.rs  split.rs  termbox.rs  win.rs
tuikit/src/: canvas.rs  cell.rs  color.rs  error.rs  event.rs  input.rs  key.rs  lib.rs  output.rs  prelude.rs  raw.rs  screen.rs  spinlock.rs  term.rs
tuikit/src/sys/: file.rs  signal.rs
tuikit/src/widget/: align.rs  mod.rs  split.rs  stack.rs  util.rs  win.rs
wix/: main.wxs
xtask/: CHANGELOG.md  Cargo.toml
xtask/src/: main.rs
(+1070 files in other folders)
