[package]
name = "skim"
version = "0.17.0"
authors = ["Zhang Jinzhou <lotabout@gmail.com>", "Loric Andre"]
description = "Fuzzy Finder in rust!"
documentation = "https://docs.rs/skim"
homepage = "https://github.com/skim-rs/skim"
repository = "https://github.com/skim-rs/skim"
readme = "../README.md"
keywords = ["fuzzy", "menu", "util"]
license = "MIT"
edition = "2021"

[lib]
name = "skim"
path = "src/lib.rs"

[[bin]]
name = "sk"
path = "src/bin/main.rs"

[dependencies]
beef = { workspace = true }
bitflags = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, optional = true, features = ["cargo", "derive", "unstable-markdown"] }
crossbeam = { workspace = true }
defer-drop = { workspace = true }
derive_builder = { workspace = true }
env_logger = { workspace = true, optional = true }
fuzzy-matcher = { workspace = true }
indexmap = { workspace = true }
log = { workspace = true }
nix = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
shell-quote = { workspace = true }
shlex = { workspace = true, optional = true }
skim-common = { path = "../skim-common/", version = "0.1.0" }
skim-tuikit = { path = "../skim-tuikit/", version = "0.6.0" }
time = { workspace = true }
timer = { workspace = true }
unicode-width = { workspace = true }
vte = { workspace = true }
which = { workspace = true }

[features]
default = ["cli"]
cli = ["dep:clap", "dep:shlex", "dep:env_logger"]
