[package]
name = "skim"
version = "0.15.4"
authors = ["Zhang Jinzhou <lotabout@gmail.com>", "Loric Andre"]
description = "Fuzzy Finder in rust!"
documentation = "https://docs.rs/skim"
homepage = "https://github.com/skim-rs/skim"
repository = "https://github.com/skim-rs/skim"
readme  = "../README.md"
keywords = ["fuzzy", "menu", "util"]
license = "MIT"
edition = "2024"

[lib]
name = "skim"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "sk"
path = "src/bin/main.rs"
required-features = ["cli"]

[dependencies]
nix = "0.30.1"
atty = { version = "0.2.14", optional = true }
regex = "1.12.2"
lazy_static = "1.5.0"
shlex = { version = "1.3.0", optional = true }
log = "0.4.28"
env_logger = { version = "0.11.8", optional = true }
time = "0.3.44"
clap = { version = "4.5.51", optional = true, features = ["cargo", "derive"] }
vte = "0.15.0"
fuzzy-matcher = "0.3.7"
rayon = "1.11.0"
derive_builder = "0.20.2"
bitflags = "2.10.0"
timer = "0.2.0"
chrono = "0.4.42"
crossbeam = "0.8.4"
beef = "0.5.2" # compact cow
defer-drop = "1.3.0"
indexmap = "2.12.0"
rand = "0.9.2"
which = "8.0.0"
ratatui = "0.29.0"
color-eyre = "0.6.5"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync", "time", "tokio-macros"] }
ansi-to-tui = "7.0.0"
futures = "0.3.31"
tokio-util = "0.7.17"
thiserror = "2.0.17"
tempfile = "3.23.0"
crossterm = { version = "0.28.1", features = ["event-stream"] }
unicode-width = "0.2.0"

[features]
default = ["cli"]
cli = ["dep:clap", "dep:atty", "dep:shlex", "dep:env_logger"]
