[package]
name = "tuikit"
version = "0.6.0"
authors = ["Jinzhou Zhang <lotabout@gmail.com>"]
description = "Toolkit for writing TUI applications"
documentation = "https://docs.rs/tuikit"
homepage = "https://github.com/lotabout/tuikit"
repository = "https://github.com/lotabout/tuikit"
readme  = "README.md"
keywords = ["tui", "terminal", "tty", "color"]
license = "MIT"
edition = "2018"

[dependencies]
lazy_static = { workspace = true }
nix = { workspace = true, default-features = false, features = ["fs", "poll", "signal", "term"] }
bitflags = { workspace = true }
term = { workspace = true }
unicode-width = { workspace = true }
log = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
