[package]
name = "tuikit"
version = "1.17.0"
authors = ["Jinzhou Zhang <lotabout@gmail.com>"]
description = "Toolkit for writing TUI applications"
documentation = "https://docs.rs/tuikit"
homepage = "https://github.com/lotabout/tuikit"
repository = "https://github.com/lotabout/tuikit"
readme  = "README.md"
keywords = ["tui", "terminal", "tty", "color"]
license = "MIT"
edition = "2018"

[dependencies]
bitflags = { workspace = true }
common = { path = "../common/" }
lazy_static = { workspace = true }
log = { workspace = true }
nix = { workspace = true, default-features = false, features = ["fs", "poll", "signal", "term"] }
term = { workspace = true }
unicode-width = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
