[package]
name = "xtask"
version = "0.1.1"
edition = "2021"

[dependencies]
clap = { version = "4.5.30", features = ["derive", "unstable-markdown"] }
clap_complete = "4.5.45"
clap_complete_fig = "4.5.2"
clap_complete_nushell = "4.5.5"
clap_mangen = "0.2.26"
skim = { path = "../skim", features = [] }
