[package]
name = "xtask"
version = "1.17.0"
edition = "2021"

[dependencies]
clap = { workspace = true, features = ["derive", "unstable-markdown"] }
clap_complete = { workspace = true }
clap_complete_fig = { workspace = true }
clap_complete_nushell = { workspace = true }
clap_mangen = { workspace = true }
skim = { path = "../skim", features = [] }
