[package]
name = "xtask"
version = "0.1.1"
edition = "2024"

[dependencies]
clap = { workspace = true, features = ["derive", "unstable-markdown"] }
clap_complete = { workspace = true }
clap_complete_fig = { workspace = true }
clap_complete_nushell = { workspace = true }
clap_mangen = { workspace = true }
skim = { path = "../skim", features = [] }
